// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input test cases Render check 1`] = `
<DocumentFragment>
  <label
    class="css-1crzmqd"
    height="7"
    width="20"
  >
    <span
      class="css-1grri41"
    >
      Label
    </span>
    <div
      class="css-11gjszk"
    >
      <input
        class="css-1cvyunr"
        placeholder="Placeholder"
      />
    </div>
    <span
      class="css-1reg724"
      role="alert"
    />
  </label>
</DocumentFragment>
`;

exports[`Input test cases Render check with icon 1`] = `
<DocumentFragment>
  <label
    class="css-1crzmqd"
    height="7"
    width="20"
  >
    <span
      class="css-1grri41"
    >
      Label
    </span>
    <div
      class="css-11gjszk"
    >
      <input
        class="css-1cvyunr"
        placeholder="Placeholder"
      />
      <svg
        aria-label="Search"
        class="css-5n1pld"
        fill="currentColor"
        height="2rem"
        role="img"
        viewBox="0 0 16 16"
        width="2rem"
      >
        <path
          d="M11.742 10.344a6.5 6.5 0 10-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 001.415-1.414l-3.85-3.85a1.007 1.007 0 00-.115-.1zM12 6.5a5.5 5.5 0 11-11 0 5.5 5.5 0 0111 0z"
        />
      </svg>
    </div>
    <span
      class="css-1reg724"
      role="alert"
    />
  </label>
</DocumentFragment>
`;
